src/objects/Edition__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Custom_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Custom Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <label>Edition #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Editions</relationshipLabel>
        <relationshipName>Editions_del</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_id__c</fullName>
        <displayFormat>EDTN-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Season_Abbreviation__c</fullName>
        <label>Season Abbreviation</label>
        <picklist>
            <controllingField>Season__c</controllingField>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <picklist>
            <picklistValues>
                <fullName>Spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring/Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer/Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall/Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winter/Spring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <description>Revisited This. Ref : SF-1811</description>
        <label>Short Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume #</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Edition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Season__c</columns>
        <columns>Allow_Custom_Name__c</columns>
        <columns>Reference_id__c</columns>
        <columns>Season_Abbreviation__c</columns>
        <columns>Volume__c</columns>
        <columns>Year__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Editions</pluralLabel>
    <recordTypes>
        <fullName>The_Bump</fullName>
        <active>true</active>
        <label>The Bump</label>
    </recordTypes>
    <recordTypes>
        <fullName>The_Knot</fullName>
        <active>true</active>
        <label>The Knot</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>